<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/action_settings"
     android:showAsAction="never"
     android:orderInCategory="100"
     android:title="@string/action_setting"/>
 <item
     android:id="@+id/action_red"
     android:title="@string/action_red"
     android:orderInCategory="1"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionred"/>
 <item
     android:id="@+id/action_org"
     android:title="@string/action_org"
     android:orderInCategory="2"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionorg"/>
 <item
     android:id="@+id/action_yel"
     android:title="@string/action_yel"
     android:orderInCategory="3"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionyel"/>
 <item
     android:id="@+id/action_grn"
     android:title="@string/action_grn"
     android:orderInCategory="4"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actiongrn"/>
 <item
     android:id="@+id/action_blu"
     android:title="@string/action_blu"
     android:orderInCategory="5"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionblu"/>
 <item
     android:id="@+id/action_pur"
     android:title="@string/action_pur"
     android:orderInCategory="6"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionpur"/>
 <item
     android:id="@+id/action_wht"
     android:title="@string/action_wht"
     android:orderInCategory="7"
     android:showAsAction="ifRoom"
     android:titleCondensed="@string/actionwht"/>


</menu>