<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        ></LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/states_earth"
        android:background="#00000000"
        android:id="@+id/ib_earth"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/ib_earth"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        ></LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_name_earth"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_earth"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv2_earth"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_earth"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv3_earth"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        ></LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/states_venus"
        android:background="#00000000"
        android:id="@+id/ib_venus"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/ib_venus"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        ></LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_name_venus"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_venus"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv2_venus"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_venus"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv3_venus"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        ></LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/states_jupiter"
        android:background="#00000000"
        android:id="@+id/ib_jupiter"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/ib_jupiter"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        ></LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_name_jupiter"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_jupiter"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv2_jupiter"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_jupiter"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:id="@+id/tv3_jupiter"
        />

</LinearLayout>