<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:id="@+id/gridLayout"
    android:rowCount="3"
    android:columnCount="3"
    android:alignmentMode="alignMargins"
    android:rowOrderPreserved="true"
    android:columnOrderPreserved="true"
    >
    <ImageButton
        android:src="@drawable/states_earth"
        android:background="#FFAACCEE"
        android:layout_gravity="left|top"
        android:id="@+id/ib_earth"
        android:layout_column="0"
        android:layout_row="0"
        android:contentDescription="@string/ib_earth"/>

    <ImageButton
        android:src="@drawable/states_venus" android:background="#FFEECCAA"
        android:layout_gravity="right|top"
        android:id="@+id/ib_venus"
        android:layout_column="2"
        android:layout_row="0"
        android:contentDescription="@string/ib_venus"
        />

    <ImageButton
        android:src="@drawable/states_jupiter" android:background="#FFCCAAEE"
        android:layout_gravity="left|bottom"
        android:id="@+id/ib_jupiter"
        android:layout_column="0"
        android:layout_row="2"
        android:contentDescription="@string/ib_jupiter"
        />

    <TextView
        android:text="@string/planet_name_earth"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3" android:layout_marginBottom="180dip"
        android:id="@+id/tv1_earth"  android:layout_gravity="center"
        android:background="#000000"
        />

    <TextView
        android:text="@string/planet_mass_earth" android:textColor="#FFFFFF"
        android:textSize="16sp" android:layout_gravity="center"
        android:visibility="visible" android:id="@+id/tv2_earth"
        android:layout_row="1" android:background="#000000" android:layout_column="0"
        android:layout_columnSpan="3" android:layout_marginBottom="120dip"

        />

    <TextView
        android:text="@string/planet_grav_earth" android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:background="#000000"
        android:layout_row="1"  android:layout_columnSpan="3"
        android:layout_marginBottom="60dip" android:visibility="visible"
        android:layout_gravity="center" android:layout_column="0"
        android:id="@+id/tv3_earth"
        />








</GridLayout>