<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">>
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="12dip"
        android:layout_width="120dip"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/states_earth"
            android:background="#00000000"
            android:id="@id/ib_earth"
            android:contentDescription="@string/ib_earth"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/states_jupiter"
            android:background="#00000000"
            android:id="@id/ib_jupiter"
            android:contentDescription="@string/ib_jupiter"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/states_venus"
            android:background="#00000000"
            android:id="@id/ib_venus"
            android:contentDescription="@string/ib_venus"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dip"
        android:paddingTop="16dip"
        android:id="@+id/uiPane">
        <ImageButton
            android:id="@+id/iv1"
            android:background="@drawable/ib_earth_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            />
        <TextView
            android:text="@string/planet_name_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tv1"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:shadowColor="#77000000"/>


        <TextView
            android:text="@string/planet_mass_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/tv2"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowColor="#77000000"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"/>

        <TextView
            android:text="@string/planet_grav_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/tv3"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowColor="#77000000"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"/>




    </LinearLayout>

</android.support.v4.widget.SlidingPaneLayout>