<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/draverLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv1"
            android:background="@drawable/ib_earth_normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_name_earth"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tv1"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:shadowColor="#77000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_earth"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/tv2"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:shadowColor="#77000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_grav_earth"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/tv3"
            android:paddingLeft="30dip"
            android:paddingTop="12dip"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:shadowColor="#77000000"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:choiceMode="singleChoice"
        android:divider="#77FFFFFF"
        android:dividerHeight="2dip"
        android:background="#CCFFFFFF"
        android:layout_gravity="start"
        android:paddingLeft="24dip"
        android:paddingRight="24dip">
    </ListView>
</android.support.v4.widget.DrawerLayout>